# event-api

./: .coverage  .gitignore  Dockerfile  README.md  crud.py  db.sqlite  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  router.py
alembic/: env.py
alembic/versions/: 067f4f701f94_add_allow_null_in_event_id.py  3a82995e9586_add_status.py  587cb08134b2_add_new_relatioship_in_session.py  81e1a1702956_initial_migration.py  914967294b6c_add_new_relatioship.py  a1817883920d_add_initial_migrations.py  cd30a847b8e4_add_status_field_in_session_model.py
api/: event.py  event_user.py  session_user.py  sessions.py
auth/: api.py  schemas.py
config/: database.py  elasticsearch.py
core/crud/: base.py
core/models/: base.py
crud/: crud_event.py  crud_event_user.py  crud_session.py  crud_session_user.py  crud_user.py
graphql_api/: all_mutations.py  all_queries.py  api.py  mutations.py  queries.py  schemas.py
graphql_api/mutations/: event.py  event_user.py  session.py  session_user.py  user.py
graphql_api/queries/: event.py  event_user.py  session.py  session_user.py  user.py
graphql_api/schemas/: event.py  event_user.py  session.py  session_user.py  user.py
models/: event.py  event_user.py  session_user.py  sessions.py  user.py
schemas/: event.py  event_user.py  session_user.py  sessions.py
services/: elastic.py
tests/: test_event_api.py  test_event_user.py  test_event_user_api.py  test_session_api.py  test_session_user.py
